Fixing about us and faqs gap

--- a/solverouswebsite/src/index.css
+++ b/solverouswebsite/src/index.css
@@ -93,7 +93,7 @@ code {
 
 /* Mission, vision, and history container style */
 .about_container_style {
-  @apply bg-gradient-to-b from-[#004D8C] to-[#027FE5] hover:bg-gradient-to-b hover:from-[#027FE5] hover:to-[#004D8C] h-[15rem] sm:h-[14rem] md:h-48 lg:h-44 xl:h-44 2xl:h-40 flex flex-col p-6 rounded-2xl md:rounded-2xl justify-center;
+  @apply bg-gradient-to-b from-[#004D8C] to-[#027FE5] hover:bg-gradient-to-b hover:from-[#027FE5] hover:to-[#004D8C] h-[15.5rem] sm:h-[14rem] md:h-48 lg:h-44 xl:h-44 2xl:h-40 flex flex-col p-6 rounded-2xl md:rounded-2xl justify-center;
 }
 
 /* Contact Form Styles */
